Add "final" to method parameters where they were missing.